--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="css/font.css">
     <title>Sky House</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img src="/images/Group 2@2x.png" alt="logo">
+            <img class="logo" src="images/Group 2.png" alt="logo">
         </a>
         <nav>
             <ul>
                 <li>
-                    <a href="#"> მთავარი </a>
+                    <a class="main" href="#"> მთავარი </a>
                 </li>
                 <li>
                     <a href="#"> ჩვენ შესახებ </a>
@@ -29,20 +31,20 @@
                     <a href="#"> პარტნიორები </a>
                 </li>
                 <li>
-                    <a href="#"> კონტაქტი </a>
+                    <a class="contact" href="#"> კონტაქტი </a>
                 </li>
             </ul>
         </nav>
     </header>
         <section>
-            <img src="/images/Rectangle 91.png" alt="img0">
-            <h1>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h1>
+            <img class="mainimage" src="images/Rectangle 91.png" alt="img0">
+            <h1 class="heading1"> რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h1>
             <div>
-                <img src="/images/Rectangle 92.png" alt="img1">
-                <img src="/images/Rectangle 93.png" alt="img2">
-                <img src="/images/Rectangle 94.png" alt="img3">
-                <img src="/images/Rectangle 95.png" alt="img4">
-                <img src="/images/Rectangle 96.png" alt="img5">
+                <img src="images/Rectangle 92.png" alt="img1">
+                <img src="images/Rectangle 93.png" alt="img2">
+                <img src="images/Rectangle 94.png" alt="img3">
+                <img src="images/Rectangle 95.png" alt="img4">
+                <img src="images/Rectangle 96.png" alt="img5">
             </div>
             <p>
                 ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
@@ -54,20 +56,20 @@
                 დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს. მათი დიდი ნაწილი ხუმრობით არის შეცვლილი, ბევრი კი უბრალოდ სიტყვების შემთხვევითი გენერირებით დაიწერა. ინტერნეტში არსებული გენერატორები, როგორც წესი, წინასწარ განსაზღვრული ტექსტის ნაგლეჯს იმეორებენ ხოლმე, ამიტომ ეს პირველი ნამდვილი გენერატორია. იგი რთული და მართებული სტრუქტურის წინადადებების ასაწყობად 200-მდე ლათინური სიტყვისგან შემდგარ ლექსიკონს იყენებს. შედეგად მიიღება ტექსტი, რომელიც ვიზუალურად მაქსიმალურად ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
             </p>
             <h5>
-                <a href="#"> დამატებითი ინფორმაცია </a>
+                <a class="additional-info" href="#"> დამატებითი ინფორმაცია </a>
             </h5>
         </section>
     <footer>
         <div>
-            <a href="#"> კონტაქტი </a>
+            <a class="footer-contact" href="#"> კონტაქტი </a>
             <P>
                 Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
             </P>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.9662273096274!2d44.79441207543!3d41.69966477126197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440ce7dcd396bd%3A0x74b270c0fafc3e22!2sShota%20Rustaveli%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1685997196610!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <img src="/images/Group 77.svg" alt="phonelogo">
-            <a href="tel:+995 555 444 333"> +995 555 444 333 </a>
-            <img src="/images/Group 78.svg" alt="maillogo">
-            <a href="mailto:example@gmail.com"> example@gmail.com </a>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.9662273096274!2d44.79441207543!3d41.69966477126197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440ce7dcd396bd%3A0x74b270c0fafc3e22!2sShota%20Rustaveli%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1685997196610!5m2!1sen!2sge" width="463" height="197" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <img src="images/Group 77.svg" alt="phonelogo">
+            <a class="tel" href="tel:+995 555 444 333"> +995 555 444 333 </a>
+            <img src="images/Group 78.svg" alt="maillogo">
+            <a class="mail" href="mailto:example@gmail.com"> example@gmail.com </a>
         </div>
     </footer>
 </body>
